# modern-cpp-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: SourcesAndHeaders.cmake
include/exampleproject/: example.hpp
src/example/math/: math.cpp  math.hpp
test/: CMakeLists.txt
test/src/: math_test.cpp
